<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="170.0dip" android:layout_height="130.0dip">
        <ImageView android:id="@id/help_hub_dialog_image_gallery" android:background="@drawable/ic_launcher_gallery" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/help_hub_button_text_size" android:textColor="@color/guide_select_wallpaper_text_color" android:ellipsize="marquee" android:gravity="center" android:layout_width="70.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/Wallpaper_chooser_gallery" android:maxLines="2" android:layout_below="@id/help_hub_dialog_image_gallery" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_gravity="right" android:id="@id/help_hub_live_wallpaper_layout" android:layout_width="170.0dip" android:layout_height="130.0dip">
        <ImageView android:id="@id/help_hub_dialog_image_live_wallpaper" android:background="@drawable/ic_launcher_live_wallpaper" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/help_hub_button_text_size" android:textColor="@color/guide_select_wallpaper_text_color" android:ellipsize="marquee" android:gravity="center" android:layout_width="70.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/Wallpaper_chooser_live_wallpapers" android:maxLines="2" android:layout_below="@id/help_hub_dialog_image_live_wallpaper" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_gravity="bottom" android:layout_width="170.0dip" android:layout_height="130.0dip">
        <ImageView android:id="@id/help_hub_dialog_image_wallpaper" android:background="@drawable/ic_launcher_wallpaper" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/help_hub_button_text_size" android:textColor="@color/guide_select_wallpaper_text_color" android:ellipsize="marquee" android:gravity="center" android:layout_width="70.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/Wallpaper_chooser_wallpapers" android:maxLines="2" android:layout_below="@id/help_hub_dialog_image_wallpaper" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <Button android:id="@id/help_hub_chooser_wallpaper_type_button" android:background="@drawable/wallpaper_options_selector" android:layout_width="@dimen/help_hub_wallpaper_type_button_layout_width" android:layout_height="@dimen/help_hub_wallpaper_type_button_layout_height" android:layout_marginLeft="@dimen/help_hub_wallpaper_type_button_margin_left" android:layout_marginTop="@dimen/help_hub_wallpaper_type_button_margin_top" />
    <ImageView android:id="@id/guide_hand_pointer_wallpaper" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/help_hub_wallpaper_type_image_margin_left" android:layout_marginTop="@dimen/help_hub_wallpaper_type_image_margin_top" android:layout_marginBottom="@dimen/help_hub_wallpaper_type_image_margin_bottom" android:src="@drawable/help_tap" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/content_description_hand" />
    <RelativeLayout android:id="@id/text_box" android:paddingLeft="@dimen/help_hub_guide_textbox_padding_left" android:paddingTop="@dimen/help_hub_guide_textbox_padding_top" android:paddingRight="@dimen/help_hub_guide_textbox_padding_right" android:paddingBottom="@dimen/help_hub_guide_textbox_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/help_hub_choose_wallpaper_type_text_box_margin_top" android:layout_alignParentTop="true">
        <TextView android:textSize="@dimen/help_hub_guide_text_size" android:textStyle="normal" android:textColor="@*android:color/black" android:id="@id/guide_bubble_summary" android:background="@drawable/help_popup_picker_bg_w_01" android:paddingLeft="@dimen/help_hub_guide_text_padding_left" android:paddingTop="@dimen/help_hub_guide_text_padding_top" android:paddingRight="@dimen/help_hub_guide_text_padding_right" android:paddingBottom="@dimen/help_hub_guide_text_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/help_hub_choose_wallpaper_type_bubble_summary_margin_left" android:layout_marginTop="@dimen/help_hub_choose_wallpaper_type_bubble_summary_margin_top" android:maxWidth="@dimen/help_hub_guide_text_width" android:text="@string/guide_select_wallpaper" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <ImageView android:id="@id/guide_up_pointer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/help_hub_choose_wallpaper_type_up_pointer_margin_left" android:layout_marginTop="@dimen/help_hub_choose_wallpaper_type_up_pointer_margin_top" android:src="@drawable/help_popup_picker_t_c" android:layout_alignParentTop="true" />
    </RelativeLayout>
</FrameLayout>