<?xml version="1.0" encoding="utf-8"?>
<appOrder
  xmlns:launcher="http://schemas.android.com/apk/res/com.sec.android.app.launcher">
    <favorite launcher:className="com.unity3d.player.UnityPlayerActivity" launcher:packageName="se.filimundus.CreativeCornersg" launcher:screen="-1" launcher:hidden="true" />
    <favorite launcher:className="com.bluepin.KidsSamsung.DreamWord" launcher:packageName="com.bluepin.KidsSamsung" launcher:screen="-1" launcher:hidden="true" />
    <favorite launcher:className="com.samsung.android.app.galaxyfinder.GalaxyFinderActivity" launcher:packageName="com.samsung.android.app.galaxyfinder" launcher:screen="-1" launcher:hidden="true" />
    <favorite launcher:className="sstream.app.activities.StreamActivity" launcher:packageName="sstream.app" launcher:screen="-1" launcher:hidden="true" />
    <favorite launcher:className="com.android.contacts.activities.DialtactsActivity" launcher:packageName="com.android.contacts" launcher:screen="0" />
    <favorite launcher:className="com.android.contacts.activities.PeopleActivity" launcher:packageName="com.android.contacts" launcher:screen="0" />
    <favorite launcher:className="com.android.mms.ui.ConversationComposer" launcher:packageName="com.android.mms" launcher:screen="0" />
    <favorite launcher:className="com.samsung.android.snote.control.ui.filemanager.MainHomeActivity" launcher:packageName="com.samsung.android.snote" launcher:screen="0" />
    <favorite launcher:className="com.samsung.android.app.pinboard.ui.PinboardActivity" launcher:packageName="com.samsung.android.app.pinboard" launcher:screen="0" />
    <favorite launcher:className="com.sec.android.gallery3d.app.Gallery" launcher:packageName="com.sec.android.gallery3d" launcher:screen="0" />
    <favorite launcher:className="com.sec.android.app.camera.Camera" launcher:packageName="com.sec.android.app.camera" launcher:screen="0" />
    <favorite launcher:className="com.sec.android.app.music.MusicActionTabActivity" launcher:packageName="com.sec.android.app.music" launcher:screen="0" />
    <favorite launcher:className="com.samsung.everglades.video.VideoMain" launcher:packageName="com.samsung.everglades.video" launcher:screen="0" />
    <favorite launcher:className="com.sec.chaton.HomeActivity" launcher:packageName="com.sec.chaton" launcher:screen="0" />
    <favorite launcher:className="com.sec.android.app.clockpackage.ClockPackage" launcher:packageName="com.sec.android.app.clockpackage" launcher:screen="0" />
    <favorite launcher:className="com.android.calendar.AllInOneActivity" launcher:packageName="com.android.calendar" launcher:screen="0" />
    <favorite launcher:className="com.android.email.activity.Welcome" launcher:packageName="com.android.email" launcher:screen="0" />
    <favorite launcher:className="com.samsung.helphub.HelpHubActivity" launcher:packageName="com.samsung.helphub" launcher:screen="0" />
    <favorite launcher:className="com.android.settings.Settings" launcher:packageName="com.android.settings" launcher:screen="0" />
    <favorite launcher:className="com.sec.everglades.main.HomeActivity" launcher:packageName="com.sec.everglades" launcher:screen="0" />
    <favorite launcher:className="com.sec.android.app.samsungapps.Main" launcher:packageName="com.sec.android.app.samsungapps" launcher:screen="0" />
    <favorite launcher:className="com.android.vending.AssetBrowserActivity" launcher:packageName="com.android.vending" launcher:screen="0" />
    <favorite launcher:className="com.google.android.maps.MapsActivity" launcher:packageName="com.google.android.apps.maps" launcher:screen="0" />
    <favorite launcher:className="com.google.android.youtube.app.honeycomb.Shell$HomeActivity" launcher:packageName="com.google.android.youtube" launcher:screen="0" />
    <folder launcher:screen="0" launcher:title="@string/folder_samsung">
        <favorite launcher:className="com.sec.android.app.sbrowser.SBrowserMainActivity" launcher:packageName="com.sec.android.app.sbrowser" launcher:screen="0" />
        <favorite launcher:className="com.sec.android.app.voicenote.main.VNMainActivity" launcher:packageName="com.sec.android.app.voicenote" launcher:screen="1" />
        <favorite launcher:className="com.sec.android.quickmemo.ui.MemoList" launcher:packageName="com.sec.android.quickmemo" launcher:screen="2" />
        <favorite launcher:className="com.sec.knox.app.container.B2CStubActivity" launcher:packageName="com.sec.knox.app.container" launcher:screen="3" />
        <favorite launcher:className="com.sec.android.app.popupcalculator.Calculator" launcher:packageName="com.sec.android.app.popupcalculator" launcher:screen="4" />
        <favorite launcher:className="com.sec.android.app.myfiles.MainActivity" launcher:packageName="com.sec.android.app.myfiles" launcher:screen="5" />
        <favorite launcher:className="com.samsung.android.app.episodes.ui.timeline.TimelineActivity" launcher:packageName="com.samsung.android.app.episodes" launcher:screen="6" />
        <favorite launcher:className="com.sec.android.app.shealth.RootActivity" launcher:packageName="com.sec.android.app.shealth" launcher:screen="7" />
        <favorite launcher:className="com.samsung.groupcast.start.StartActivity" launcher:packageName="com.samsung.groupcast" launcher:screen="8" />
        <favorite launcher:className="com.mfluent.asp.ui.MobileChargesNotificationActivity" launcher:packageName="com.sec.pcw" launcher:screen="9" />
        <favorite launcher:className="com.peel.main.Main" launcher:packageName="tv.peel.samsung.app" launcher:screen="10" />
        <favorite launcher:className="com.sec.android.app.translator.MainActivity" launcher:packageName="com.sec.android.app.translator" launcher:screen="11" />
        <favorite launcher:className="com.vlingo.midas.gui.ConversationActivity" launcher:packageName="com.vlingo.midas" launcher:screen="12" />
        <favorite launcher:className="com.android.providers.downloads.ui.DownloadList" launcher:packageName="com.android.providers.downloads.ui" launcher:screen="13" />
    </folder>
    <folder launcher:screen="0" launcher:title="@string/folder_galaxy_plus">
        <favorite launcher:className="com.adsk.sketchbook.SketchBook" launcher:packageName="com.adsk.sketchbookhd.galaxy.oem" launcher:screen="0" />
        <favorite launcher:className="flipboard.activities.LaunchActivity" launcher:packageName="flipboard.app" launcher:screen="1" />
        <favorite launcher:className="com.dropbox.android.activity.DropboxBrowser" launcher:packageName="com.dropbox.android" launcher:screen="2" />
        <favorite launcher:className="com.evernote.ui.HomeActivity" launcher:packageName="com.evernote" launcher:screen="3" />
        <favorite launcher:className="com.spotify.mobile.android.ui.activity.MainActivity" launcher:packageName="com.spotify.mobile.android.ui" launcher:screen="4" />
        <favorite launcher:className="com.bloomberg.android.plus.activity.EulaActivity" launcher:packageName="com.bloomberg.android.plus" launcher:screen="5" />
        <favorite launcher:className="com.tripadvisor.tripadvisor.TripAdvisorTripAdvisorActivity" launcher:packageName="com.tripadvisor.tripadvisor" launcher:screen="6" />
    </folder>
    <folder launcher:screen="0" launcher:title="@string/folder_google">
        <favorite launcher:className="com.google.android.googlequicksearchbox.SearchActivity" launcher:packageName="com.google.android.googlequicksearchbox" launcher:screen="0" />
        <favorite launcher:className="com.google.android.googlequicksearchbox.VoiceSearchActivity" launcher:packageName="com.google.android.googlequicksearchbox" launcher:screen="1" />
        <favorite launcher:className="com.google.android.gm.ConversationListActivityGmail" launcher:packageName="com.google.android.gm" launcher:screen="2" />
        <favorite launcher:className="com.google.android.apps.plus.phone.HomeActivity" launcher:packageName="com.google.android.apps.plus" launcher:screen="3" />
        <favorite launcher:className="com.android.music.activitymanagement.TopLevelActivity" launcher:packageName="com.google.android.music" launcher:screen="4" />
        <favorite launcher:className="com.google.android.youtube.videos.EntryPoint" launcher:packageName="com.google.android.videos" launcher:screen="5" />
        <favorite launcher:className="com.google.android.apps.books.app.BooksActivity" launcher:packageName="com.google.android.apps.books" launcher:screen="6" />
        <favorite launcher:className="com.google.apps.dots.android.app.activity.CurrentsStartActivity" launcher:packageName="com.google.android.apps.magazines" launcher:screen="7" />
        <favorite launcher:className="com.google.android.gms.games.ui.destination.main.MainActivity" launcher:packageName="com.google.android.play.games" launcher:screen="8" />
        <favorite launcher:className="com.google.android.talk.SigningInActivity" launcher:packageName="com.google.android.talk" launcher:screen="9" />
        <favorite launcher:className="com.google.android.apps.chrome.Main" launcher:packageName="com.android.chrome" launcher:screen="10" />
        <favorite launcher:className="com.google.android.gms.common.settings.GoogleSettingsActivity" launcher:packageName="com.google.android.gms" launcher:screen="11" />
        <favorite launcher:className="com.google.android.maps.driveabout.app.DestinationActivity" launcher:packageName="com.google.android.apps.maps" launcher:screen="12" />
        <favorite launcher:className="com.google.android.maps.PlacesActivity" launcher:packageName="com.google.android.apps.maps" launcher:screen="13" />
        <favorite launcher:className="com.google.android.apps.plus.phone.ConversationListActivity" launcher:packageName="com.google.android.apps.plus" launcher:screen="14" />
    </folder>
</appOrder>